--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="OnCourse"
+        android:text="Login"
         android:id="@+id/Banner"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
