--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.owen.sampleapp.MainActivity">
+    tools:context=".LoginActivity">
 
     <EditText
         android:layout_width="wrap_content"
@@ -48,6 +48,7 @@
         android:layout_below="@+id/Password"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
-        android:onClick="LoginOnClick" />
+        android:onClick="LoginOnClick"
+        android:textColor="@colors/black" />
 
 </RelativeLayout>
