--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
         android:onClick="LoginOnClick"
-        android:textColor="@colors/black" />
+        android:textColor="#000000" />
 
 </RelativeLayout>
