--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="android:background">@color/grey</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:orientation">vertical</item>
+        <item name="android:screenOrientation">portrait</item>
     </style>
 
 </resources>
